--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiannah-fragrance",
+  "name": "dambraham-foundation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,8 +18,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.70.0",
+    "react-slick": "^0.30.2",
+    "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
